--- a/src/WebApplication/Pages/Customers/Index.cshtml
+++ b/src/WebApplication/Pages/Customers/Index.cshtml
@@ -14,19 +14,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].Id)
+                @Html.DisplayNameFor(model => model.Customers[0].Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].Name)
+                @Html.DisplayNameFor(model => model.Customers[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].PhoneNumber)
+                @Html.DisplayNameFor(model => model.Customers[0].PhoneNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].Address)
+                @Html.DisplayNameFor(model => model.Customers[0].Address)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].PostalCode)
+                @Html.DisplayNameFor(model => model.Customers[0].PostalCode)
             </th>
             <th></th>
         </tr>
