Changed data to row

--- a/src/WebApplication/Pages/Customers/Index.cshtml
+++ b/src/WebApplication/Pages/Customers/Index.cshtml
@@ -51,7 +51,7 @@
                     "targets": -1,
                     "data": null,
                     "render": function (data, type, row, meta) {
-                        return '<a href="/customers/edit/' + data.id + '">Edit</a> | <a href="/customers/details/' + data.id + '">Details</a> | <a href="/customers/delete/' + data.id + '">Delete</a>';
+                        return '<a href="/customers/edit/' + row.id + '">Edit</a> | <a href="/customers/details/' + row.id + '">Details</a> | <a href="/customers/delete/' + row.id + '">Delete</a>';
                     },
                     "sortable": false
                 },
